--- a/search.css
+++ b/search.css
@@ -216,11 +216,11 @@ WebKit inertia scrolling is being added here for any present/future devices that
 .Map2:focus {
   /* border: 3px blue;*/
   /*background: #e0d8b7;*/
-  background: white;
+  /* background: white; */
   /* flex: none;*/
-  overflow: scroll;
-  position: fixed;
-  transform: scale(1.35, 1.35);
+  /* overflow: scroll; */
+  /* position: fixed; */
+  /* transform: scale(1.35, 1.35); */
 }
 .Query2 {
   margin-top: 8px;
