--- a/search.css
+++ b/search.css
@@ -1160,11 +1160,27 @@ footer[_ngcontent-qaq-c136] {
   line-height: 10px;
 }
 
+.arrow {
+  border: solid var(--main-purple);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
 #hide-query-btn {
   margin-left: 5px;
   cursor: pointer;
 }
-
 
 .search-note-btn {
   color: var(--main-purple);
