--- a/landing.css
+++ b/landing.css
@@ -77,8 +77,12 @@
   text-decoration: underline;
 }
 
-.saved-search {
+/* .saved-search {
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 2rem;
+} */
+
+.card {
+  margin: 2rem;
 }
